[TASK] update BElayouts

--- a/Resources/Private/Templates/Page/1column.html
+++ b/Resources/Private/Templates/Page/1column.html
@@ -58,13 +58,17 @@
     </section>
 
     <section class="1column__content">
-      <div class="1column__content-container container">
-        <div class="row">
-          <div class="col">
-            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:1001}" />
+
+      <div class="container-wrp">
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:1001}" />
+            </div>
           </div>
         </div>
       </div>
+
     </section>
 
     <section class="1column__after-content">
