--- a/Resources/Private/Templates/Page/3columnsSidenav.html
+++ b/Resources/Private/Templates/Page/3columnsSidenav.html
@@ -58,21 +58,28 @@
     </section>
 
     <section class="3columns-sidenav__content">
-      <div class="3columns-sidenav__content-container container">
-        <div class="row">
-          <div class="col-md-3">
-            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:2501}" />
-          </div>
-          <div class="col-md-3">
-            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:2502}" />
-          </div>
-          <div class="col-md-3">
-            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:2503}" />
-          </div>
-          <div class="col-md-3">
+
+      <div class="container-wrp">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-3">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:2501}" />
+            </div>
+
+            <div class="col-md-3">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:2502}" />
+            </div>
+
+            <div class="col-md-3">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:2503}" />
+            </div>
+
+            <div class="col-md-3">
+            </div>
           </div>
         </div>
       </div>
+
     </section>
 
     <section class="3columns-sidenav__after-content">
