--- a/Resources/Private/Templates/Page/4columns.html
+++ b/Resources/Private/Templates/Page/4columns.html
@@ -58,22 +58,29 @@
     </section>
 
     <section class="4columns__content">
-      <div class="4columns__content-container container">
-        <div class="row">
-          <div class="col-md-3">
-            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:2501}" />
-          </div>
-          <div class="col-md-3">
-            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:2502}" />
-          </div>
-          <div class="col-md-3">
-            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:2503}" />
-          </div>
-          <div class="col-md-3">
-            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:2504}" />
+
+      <div class="container-wrp">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-3">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:2501}" />
+            </div>
+
+            <div class="col-md-3">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:2502}" />
+            </div>
+
+            <div class="col-md-3">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:2503}" />
+            </div>
+
+            <div class="col-md-3">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:2504}" />
+            </div>
           </div>
         </div>
       </div>
+
     </section>
 
     <section class="4columns__after-content">
