--- a/Resources/Private/Templates/Page/Default.html
+++ b/Resources/Private/Templates/Page/Default.html
@@ -46,13 +46,17 @@
     </f:if>
 
     <section class="default__content">
-      <div class="default__content-container container">
-        <div class="row">
-          <div class="col">
-            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:1001}" />
+
+      <div class="container-wrp">
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:1001}" />
+            </div>
           </div>
         </div>
       </div>
+
     </section>
 
   </main>
