--- a/Resources/Private/Templates/Page/Sidenav251column75.html
+++ b/Resources/Private/Templates/Page/Sidenav251column75.html
@@ -58,15 +58,20 @@
     </section>
 
     <section class="sidenav25-1column75__content">
-      <div class="sidenav25-1column75__content-container container">
-        <div class="row">
-          <div class="col-md-3">
-          </div>
-          <div class="col-md-9">
-            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:7501}" />
+
+      <div class="container-wrp">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-3">
+            </div>
+
+            <div class="col-md-9">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:7501}" />
+            </div>
           </div>
         </div>
       </div>
+
     </section>
 
     <section class="sidenav25-1column75__after-content">
