--- a/Resources/Private/Templates/Page/StartPage.html
+++ b/Resources/Private/Templates/Page/StartPage.html
@@ -40,7 +40,7 @@
   <main id="main" class="start-page">
 
     <section class="start-page__top-content">
-      <div class="start-page__top-content-container">
+      <div class="start-page__top-content-container pb-5">
         <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:50}" />
       </div>
     </section>
@@ -52,19 +52,90 @@
     </section>
 
     <section class="start-page__content">
-      <div class="start-page__content-container container">
-        <div class="row">
-          <div class="col-md">
-            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3301}" />
-          </div>
-          <div class="col-md">
-            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3302}" />
-          </div>
-          <div class="col-md">
-            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3303}" />
+
+      <div class="container-wrp pt-2 pb-5">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3301}" />
+            </div>
+
+            <div class="col-md-4">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3302}" />
+            </div>
+
+            <div class="col-md-4">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3303}" />
+            </div>
           </div>
         </div>
       </div>
+
+      <div class="container-wrp black-bg-color pt-5 pb-5">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3304}" />
+            </div>
+
+            <div class="col-md-4">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3305}" />
+            </div>
+
+            <div class="col-md-4">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3306}" />
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="container-wrp">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-6 g-0 align-self-center figure-lg-margin-0">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5001}" />
+            </div>
+
+            <div class="col-lg-5 g-0 offset-lg-1 align-self-center">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5002}" />
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container-wrp">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-5 g-0 align-self-center">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5003}" />
+            </div>
+
+            <div class="col-md-6 g-0 offset-md-1 align-self-center">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5004}" />
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container-wrp pt-5 pb-5">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3307}" />
+            </div>
+
+            <div class="col-md-4">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3308}" />
+            </div>
+
+            <div class="col-md-4">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3309}" />
+            </div>
+          </div>
+        </div>
+      </div>
+
     </section>
 
     <section class="start-page__after-content">
