--- a/Resources/Private/Templates/Page/2columns.html
+++ b/Resources/Private/Templates/Page/2columns.html
@@ -58,16 +58,21 @@
     </section>
 
     <section class="2columns__content">
-      <div class="2columns__content-container container">
-        <div class="row">
-          <div class="col-md-6">
-            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5001}" />
-          </div>
-          <div class="col-md-6">
-            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5002}" />
+
+      <div class="container-wrp">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5001}" />
+            </div>
+
+            <div class="col-md-6">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5002}" />
+            </div>
           </div>
         </div>
       </div>
+
     </section>
 
     <section class="2columns__after-content">
