--- a/Resources/Private/Templates/Page/2columns2550Sidenav25.html
+++ b/Resources/Private/Templates/Page/2columns2550Sidenav25.html
@@ -58,18 +58,24 @@
     </section>
 
     <section class="2columns25-50-sidenav25__content">
-      <div class="2columns25-50-sidenav25__content-container container">
-        <div class="row">
-          <div class="col-md-3">
-            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:2501}" />
-          </div>
-          <div class="col-md-6">
-            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5001}" />
-          </div>
-          <div class="col-md-3">
+
+      <div class="container-wrp">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-3">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:2501}" />
+            </div>
+
+            <div class="col-md-6">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5001}" />
+            </div>
+
+            <div class="col-md-3">
+            </div>
           </div>
         </div>
       </div>
+
     </section>
 
     <section class="2columns25-50-sidenav25__after-content">
