--- a/Resources/Private/Templates/Page/2columns2575.html
+++ b/Resources/Private/Templates/Page/2columns2575.html
@@ -58,16 +58,21 @@
     </section>
 
     <section class="2columns25-75__content">
-      <div class="2columns25-75__content-container container">
-        <div class="row">
-          <div class="col-md-3">
-            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:2501}" />
-          </div>
-          <div class="col-md-9">
-            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:7501}" />
+
+      <div class="container-wrp">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-3">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:2501}" />
+            </div>
+
+            <div class="col-md-9">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:7501}" />
+            </div>
           </div>
         </div>
       </div>
+
     </section>
 
     <section class="2columns25-75__after-content">
