--- a/Resources/Private/Templates/Page/3columns255025.html
+++ b/Resources/Private/Templates/Page/3columns255025.html
@@ -58,19 +58,25 @@
     </section>
 
     <section class="3columns25-50-25__content">
-      <div class="3columns25-50-25__content-container container">
-        <div class="row">
-          <div class="col-md-3">
-            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:2501}" />
-          </div>
-          <div class="col-md-6">
-            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5001}" />
-          </div>
-          <div class="col-md-3">
-            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:2502}" />
+
+      <div class="container-wrp">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-3">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:2501}" />
+            </div>
+
+            <div class="col-md-6">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5001}" />
+            </div>
+
+            <div class="col-md-3">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:2502}" />
+            </div>
           </div>
         </div>
       </div>
+
     </section>
 
     <section class="3columns25-50-25__after-content">
