--- a/Resources/Private/Templates/Page/Sidenav2columns.html
+++ b/Resources/Private/Templates/Page/Sidenav2columns.html
@@ -58,18 +58,24 @@
     </section>
 
     <section class="sidenav-2columns__content">
-      <div class="sidenav-2columns__content-container container">
-        <div class="row">
-          <div class="col-md-4">
-          </div>
-          <div class="col-md-4">
-            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3302}" />
-          </div>
-          <div class="col-md-4">
-            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3303}" />
+
+      <div class="container-wrp">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4">
+            </div>
+
+            <div class="col-md-4">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3302}" />
+            </div>
+
+            <div class="col-md-4">
+              <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3303}" />
+            </div>
           </div>
         </div>
       </div>
+
     </section>
 
     <section class="sidenav-2columns__after-content">
