[TASK] header partials, add classes to identify headings

--- a/Resources/Private/Partials/ContentElements/Header/Render/HeaderText.html
+++ b/Resources/Private/Partials/ContentElements/Header/Render/HeaderText.html
@@ -3,32 +3,32 @@
 <f:if condition="{header_text}">
   <f:switch expression="{header_layout}">
     <f:case value="0">
-      <h1 class="{header_position}">
+      <h1 class="{header_position} header-text-item">
         <f:link.typolink parameter="{header_link}"><f:format.nl2br>{header_text}</f:format.nl2br></f:link.typolink>
       </h1>
     </f:case>
     <f:case value="1">
-      <h2 class="{header_position}">
+      <h2 class="{header_position} header-text-item">
         <f:link.typolink parameter="{header_link}"><f:format.nl2br>{header_text}</f:format.nl2br></f:link.typolink>
       </h2>
     </f:case>
     <f:case value="2">
-      <h3 class="{header_position}">
+      <h3 class="{header_position} header-text-item">
         <f:link.typolink parameter="{header_link}"><f:format.nl2br>{header_text}</f:format.nl2br></f:link.typolink>
       </h3>
     </f:case>
     <f:case value="3">
-      <h4 class="{header_position}">
+      <h4 class="{header_position} header-text-item">
         <f:link.typolink parameter="{header_link}"><f:format.nl2br>{header_text}</f:format.nl2br></f:link.typolink>
       </h4>
     </f:case>
     <f:case value="4">
-      <h5 class="{header_position}">
+      <h5 class="{header_position} header-text-item">
         <f:link.typolink parameter="{header_link}"><f:format.nl2br>{header_text}</f:format.nl2br></f:link.typolink>
       </h5>
     </f:case>
     <f:case value="5">
-      <h6 class="{header_position}">
+      <h6 class="{header_position} header-text-item">
         <f:link.typolink parameter="{header_link}"><f:format.nl2br>{header_text}</f:format.nl2br></f:link.typolink>
       </h6>
     </f:case>
