--- a/theme/src/scss/bootstrap/_index.scss
+++ b/theme/src/scss/bootstrap/_index.scss
@@ -21,7 +21,7 @@
 @import "../../../../node_modules/bootstrap/scss/helpers/text-truncation";
 
 // Bootstrap Utilities
-// @import "../../../../node_modules/bootstrap/scss/utilities/api";
+@import "../../../../node_modules/bootstrap/scss/utilities/api";
 
 // Bootstrap Components
 // @import "../../../../node_modules/bootstrap/scss/dropdown";
