--- a/theme/src/scss/main/helpers/media.scss
+++ b/theme/src/scss/main/helpers/media.scss
@@ -1,3 +1,6 @@
+// X-Small devices (portrait phones, less than 576px)
+// No media query for `xs` since this is the default in Bootstrap
+
 // images/media
 .img-fluid {
   max-width: 100%;
@@ -21,3 +24,58 @@
 .figure-video {
   display: block;
 }
+
+.figure-margin-0 .figure,
+.figure-margin-0 .figure-img {
+  margin: 0;
+}
+
+// --------------------------------------------------------
+// X-Small devices (portrait phones, less than 576px) xs
+// @media (max-width: 575.98px) { ... }
+// Small devices (landscape phones, 576px and up) sm
+@media (min-width: 576px) {
+  .figure-sm-margin-0 .figure,
+  .figure-sm-margin-0 .figure-img {
+    margin: 0;
+  }
+}
+
+// --------------------------------------------------------
+// Small devices (landscape phones, less than 768px) sm
+// @media (max-width: 767.98px) { ... }
+// Medium devices (tablets, 768px and up) md
+@media (min-width: 768px) {
+  .figure-md-margin-0 .figure,
+  .figure-md-margin-0 .figure-img {
+    margin: 0;
+  }
+}
+
+// --------------------------------------------------------
+// Medium devices (tablets, less than 992px) md
+// @media (max-width: 991.98px) { ... }
+// Large devices (desktops, 992px and up) lg
+@media (min-width: 992px) {
+  .figure-lg-margin-0 .figure,
+  .figure-lg-margin-0 .figure-img {
+    margin: 0;
+  }
+}
+
+// --------------------------------------------------------
+// Large devices (desktops, less than 1200px) lg
+// @media (max-width: 1199.98px) { ... }
+// X-Large devices (large desktops, 1200px and up) xl
+@media (min-width: 1200px) {
+  .figure-xl-margin-0 .figure,
+  .figure-xl-margin-0 .figure-img {
+    margin: 0;
+  }
+}
+
+// --------------------------------------------------------
+// X-Large devices (large desktops, less than 1400px) xl
+// @media (max-width: 1399.98px) { ... }
+// XX-Large devices (larger desktops, 1400px and up) xxl
+// @media (min-width: 1400px) { ... }
